stateDiagram-v2
    direction LR

    [*] --> Pending
    Pending --> Running : .then()
    Pending --> Running : .start()
    Pending --> Cancelled : cancel
    Running --> Cancelled : cancel
    Cancelled --> Rejected

    state Pending {
      [*] --> state=PENDING
      state=PENDING --> [*]
    }

    state Running {
      [*] --> state=RUNNING
      state=RUNNING --> NotifyStarted
      NotifyStarted --> [*]
      NotifyStarted : Notify onStart
    }
    state Rejected {
      [*] --> NotifyRejected
      NotifyRejected --> [*]
      NotifyRejected : Notify onRejected
    }

    state Cancelled {
      [*] --> state=CANCELLED
      state=CANCELLED --> NotifyCancelled
      NotifyCancelled --> [*]
      NotifyCancelled: Notif onCancelled
    }
